Actually fix the logo dark mode problem

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -490,3 +490,7 @@
 			}
 		}
 	}
+
+	html[data-theme="dark"] #header .navbar-brand img.logo-text-image {
+		filter: invert(1);
+	}
